--- a/templates/session.html
+++ b/templates/session.html
@@ -2,20 +2,23 @@
   <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
     <style>
       body {
-        background-color: #454544;
+        background-color:white;
+        font-family: 'dosis';
       }
       table, th, td {
-        border: 0.5px solid #c9c9c9;
+        border: 0.5px solid #4b4949;
         border-collapse: collapse;
-        color: #c9c9c9;
+        color: #585454;
       }
       .click a {
         display: block;
       }
       table {
         width: 90%;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       }
       .blue {
         background-color:#2888DB;
@@ -28,7 +31,7 @@
         opacity: 0.5;
       }
       .empty {
-        background-color: #2e2e2e;
+        background-color: rgb(212, 211, 211);
         opacity: 0.5
       }
       .out_of_range {
@@ -41,8 +44,9 @@
         opacity: 0.5;
       }
       td {
-        width: 9.09%;
+        width: 9.15%;
         position: relative;
+        padding-bottom: 4px;
       }
       td:after {
         content: '';
@@ -56,7 +60,7 @@
         font-size:7vw;
         color:white;
         text-align:center;
-        vertical-align: bottom;
+        vertical-align: center;
         position: absolute;
         top: 0;
         bottom: 0;
@@ -65,7 +69,7 @@
       }
       .row-header {
         font-size:5vw;
-        color:#c9c9c9;
+        color:#585454;
         text-align:center;
         vertical-align: bottom;
         position: absolute;
@@ -112,55 +116,54 @@
       <h2>Game Code</h2>
       <h3>{{ session.get('session_code') }}</h3>
       <!-- table for pieces not on the board -->
-      
       <table id="chest" border="1px solid black" border-collapse="collapse" width="90%">
-            {% set user_pieces = [] %}
-            {% set empty_squares = [] %}
-            {% for piece in session.get('unplaced_pieces') %}
-            {% if session.get('unplaced_pieces').index(piece) == 0 %}
-              <tr>
-            {% endif %}
-            {% for x in range(piece[1]) %}
-            {% set __ = user_pieces.append(1) %}
-              <td><div class="square"><div class="content {{ session.get('color') }}">{{ piece[0] }}</div></div></td>
-            {% if user_pieces|length % 10 == 0 %}
-              </tr><tr>
-            {% endif %}
-            {% endfor %}
-            {% endfor %}
-            {% for extra_space in range(40 - user_pieces|length) %}
-              <td><div class="square"><div class="content empty"></div></div></td>
-            {% set __ = empty_squares.append(1) %}
-            {% if (user_pieces + empty_squares)|length % 10 == 0 %}
-              </tr><tr>
-            {% endif %}
-            {% endfor %}
-              </tr>
-      </table>
-      <div id='invalid_move_message'><br></div>
-      <!-- Table for game board -->
-      <div id='board_container'>
-      <table id="grid" class="board" border="1px solid black" border-collapse="collapse" width="90%">
-            <tr>
-                <th></th>
-              {% for n in range(10) %}
-                <th>{{ n+1 }}</th>
+              {% set user_pieces = [] %}
+              {% set empty_squares = [] %}
+              {% for piece in session.get('unplaced_pieces') %}
+              {% if session.get('unplaced_pieces').index(piece) == 0 %}
+                <tr>
+              {% endif %}
+              {% for x in range(piece[1]) %}
+              {% set __ = user_pieces.append(1) %}
+                <td><div class="square"><div class="content {{ session.get('color') }}">{{ piece[0] }}</div></div></td>
+              {% if user_pieces|length % 10 == 0 %}
+                </tr><tr>
+              {% endif %}
               {% endfor %}
-            </tr>
-          {% for row in session.get('board_state') %}
-            <tr id = {{ row }} >
-                <td class="board"><div class="square"><div class="row-header">{{ row }}</div></div></td>
-            {% for cell in session.get('board_state')[row] %}
-                {% set cellContent =  session.get('board_state')[row][cell]['piece'] %}
-                <td class="board" id= {{ cell }} ><div class="square"><div class="content {{ session.get('board_state')[row][cell]['color'] }}">
-                {% if session.get('board_state')[row][cell]['color'] == session.get('color') %}
-                  {{ cellContent }}
-                {% endif %}
-                </div></div></td>
+              {% endfor %}
+              {% for extra_space in range(40 - user_pieces|length) %}
+                <td><div class="square"><div class="content empty"></div></div></td>
+              {% set __ = empty_squares.append(1) %}
+              {% if (user_pieces + empty_squares)|length % 10 == 0 %}
+                </tr><tr>
+              {% endif %}
+              {% endfor %}
+                </tr>
+        </table>
+        <div id='invalid_move_message'><br></div>
+        <!-- Table for game board -->
+        <div id='board_container'>
+        <table id="grid" class="board" border="1px solid black" border-collapse="collapse" width="90%">
+              <tr>
+                  <th></th>
+                {% for n in range(10) %}
+                  <th>{{ n+1 }}</th>
+                {% endfor %}
+              </tr>
+            {% for row in session.get('board_state') %}
+              <tr id = {{ row }} >
+                  <td class="board"><div class="square"><div class="row-header">{{ row }}</div></div></td>
+              {% for cell in session.get('board_state')[row] %}
+                  {% set cellContent =  session.get('board_state')[row][cell]['piece'] %}
+                  <td class="board" id= {{ cell }} ><div class="square"><div class="content {{ session.get('board_state')[row][cell]['color'] }}">
+                  {% if session.get('board_state')[row][cell]['color'] == session.get('color') %}
+                    {{ cellContent }}
+                  {% endif %}
+                  </div></div></td>
+              {% endfor %}
+              </tr>
             {% endfor %}
-            </tr>
-          {% endfor %}
-      </table>
+        </table>
       </div>
       <script>
       window.phase = "{{ session.get('phase') }}"
