made unplaced pieces chest disappear after prep phase

--- a/templates/session.html
+++ b/templates/session.html
@@ -146,7 +146,7 @@
         <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div id="phase"></div>&emsp;&emsp;
-          <button class='svg_button' onclick='toggle_chat(document.getElementById("chat"))'><svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-chat-left-dots" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <button class='svg_button' onclick='toggle_element(document.getElementById("chat"))'><svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-chat-left-dots" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill='whitesmoke' fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v11.586l2-2A2 2 0 0 1 4.414 11H14a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
             <path fill='whitesmoke' d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
           </svg></button>&emsp;&emsp;
@@ -252,7 +252,7 @@
       }
       }
 
-      function toggle_chat(ele) {
+      function toggle_element(ele) {
         if (ele.classList.contains('hidden') === true) {
           ele.classList.add('fullscreen');
           ele.classList.remove('hidden');
@@ -407,6 +407,9 @@
       modifyGrid('grid',modification='addListeners');
       modifyGrid('chest',modification='addListeners');
       console.log(window.phase);
+      if (document.getElementById('chest').classList.contains('hidden') === false) {
+        toggle_element(document.getElementById('chest'));
+      }
       if (window.phase.includes('wins') === true) {
         console.log('executing...');
         show_victory_screen(window.phase.split('_')[0]);
@@ -477,6 +480,9 @@
             } else {
             window.phase = msg['phase'];
             showPhase(window.phase);
+            if ((window.phase != 'preparation') & (document.getElementById('chest').classList.contains('hidden') === false)) {
+              toggle_element(document.getElementById('chest'));
+            }
             }
             // handling of board states received by backend for opposing moves only
             // modifies front end based on change
