--- a/templates/session.html
+++ b/templates/session.html
@@ -155,6 +155,8 @@
         bottom: 0;
         left: 0;
         padding: 15px;
+        background-color: rgb(223, 223, 223);
+        width: 100%;
       }
       input[type=text] {
         height: 38px;
